--- a/site/themes/redwood/layouts/default.html
+++ b/site/themes/redwood/layouts/default.html
@@ -23,6 +23,7 @@
     <footer class="page">
         <p class="copyright">&copy; {{ now format="Y" }} {{ author_name }}</p>
         <p class="tribute">Built with Statamic</p>
+        <a href="#">TESTED BY KRIS</a>
     </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
