--- a/site/themes/redwood/partials/nav.html
+++ b/site/themes/redwood/partials/nav.html
@@ -22,7 +22,7 @@
             </ul>
             <form class="navbar-form navbar-right" role="search" action="{{ link to='search' }}">
                 <div class="form-group">
-                    <input type="text" class="form-control search" name="q" placeholder="Search">
+                    <input type="text" class="form-control search" name="q" placeholder="Search Jobs">
                 </div>
             </form>
             <ul class="nav navbar-nav navbar-right">
