--- a/site/themes/redwood/partials/nav.html
+++ b/site/themes/redwood/partials/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">{{ site_name }}</a>
+            <a class="navbar-brand" href="images/logo.png">{{ site_name }}</a>
         </div>
 
         <div class="collapse navbar-collapse" id="nav-main">
